fix: correct a couple of styling issues on mobile

--- a/source/_public/sass/_components.footer.scss
+++ b/source/_public/sass/_components.footer.scss
@@ -1,6 +1,6 @@
 .c-footer {
   color: get-color(footer-copy);
-  margin-bottom: get-size(gutter);
+  padding-bottom: get-size(gutter);
   margin-top: get-size(gutter);
 }
 
