--- a/source/_public/sass/_elements.page.scss
+++ b/source/_public/sass/_elements.page.scss
@@ -15,6 +15,7 @@ body {
 }
 
 html {
+  -webkit-text-size-adjust: 100%;
   font-family: Open Sans, sans-serif;
   font-size: 1rem;
   height: 100%;
